--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -138,3 +138,24 @@ li {
 .custom-file-input:lang(fr) ~ .custom-file-label::after{
     content: "Parcourir";
 }
+
+//********************************
+// STYLES CONCEPT
+//********************************
+.concept p {
+    font-family: 'Roboto', sans-serif;
+}
+.concept ul{
+    list-style-type:;
+}
+
+
+.concept img {
+    width: 250px;
+    text-align: center;
+    
+}
+
+.concept h3{
+    font-family: 'noteworthybold';
+}
