Mise en commentaire ligne 158 style .concept ul

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -154,9 +154,10 @@ li {
 .concept p {
     font-family: 'Roboto', sans-serif;
 }
-.concept ul{
-    list-style-type:;
-}
+
+// .concept ul{
+//     list-style-type: ;
+// }
 
 
 .concept img {
