--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -15,7 +15,7 @@
 					<ul class="navbar-nav mb-lg-0 text-center word">					
 						<li><a class="nav-link" href=" {{ path('accueil') }} ">Accueil</a></li>
 						<li><a class="nav-link" href=" {# {{ path('concept_index') }} #} ">Concept</a></li>
-						<li><a class="nav-link" href=" {{ path('oeuvre_index') }} ">Oeuvres</a></li>
+						<li><a class="nav-link" href=" {{ path('oeuvres') }} ">Oeuvres</a></li>
 						<li><a class="nav-link" href=" {# {{ path('evenement_index') }} #} ">Evénements</a></li>
 					</ul>	
 				</div>
