--- a/templates/profil/profil_admin.html.twig
+++ b/templates/profil/profil_admin.html.twig
@@ -30,7 +30,7 @@
                 <h5 class="card-title">Les oeuvres</h5>
                 <ul>
                     <li class="li-profil"><a href="{{ path("bo_oeuvres") }}">Voir les oeuvres</a></li>
-                    <li class="li-profil"><a href="{{ path("oeuvre_new") }}">Ajouter une oeuvre</a></li>
+                    <li class="li-profil"><a href="{{ path("admin_oeuvre_new") }}">Ajouter une oeuvre</a></li>
                 </ul>
             </div>
         </div>
