--- a/templates/membre/edit.html.twig
+++ b/templates/membre/edit.html.twig
@@ -18,12 +18,12 @@
             <!-- Faire la boucle gestion photo -->
             <img class="rounded img-membre m-3" src="/images/avatar_default.png" alt="photo de profil">
             {{ membre.photo }}
-        {{ include('membre/_form.html.twig', {'button_label': 'Update'}) }}
+        {{ include('membre/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
         </div>
     </div>
 
     <div class="d-flex justify-content-between">
-        <a href="{{ path('membre_index') }}"class="btn"><i class="fas fa-arrow-left"></i> Retour</a>
+        <a href="{{ path('membre_index') }}" class="btn"><i class="fas fa-arrow-left"></i> Retour</a>
         {{ include('membre/_delete_form.html.twig') }}
     </div>
 
