--- a/templates/oeuvre/new.html.twig
+++ b/templates/oeuvre/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'bo_base.html.twig' %}
 
-{% block title %}Art d'un temps - Nouvvelle Oeuvre{% endblock %}
+{% block title %}Art d'un temps - Nouvelle Oeuvre{% endblock %}
 
 {% block content %}
 <nav aria-label="breadcrumb">
