--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -96,9 +96,7 @@ li {
     padding-bottom: 50px;
 }
 
-.sinscrire {
-    width: 330px;
-    height: 19px;
+.text-slide-home {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
