création branche develop3 et ajout copiryght

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -140,11 +140,7 @@
 
 					<br>
 					<div class="text-center">
-						&copy;
-						<script>
-							document.write(new Date().getUTCFullYear());
-						</script>
-						.Tous droits réservés, Design by ESDJ
+						&copy;{{ "now"|date("Y") }} .Tous droits réservés, Design by ESDJ
 					</div>
 				</div>
 				</footer>
