corrections ortho/typo

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,8 +36,7 @@
 					<div class="container-fluid">
 					    <div class="row justify-content-xl-around">
 					        <div class="col-xl-7">
-        					    <h2>
-            						Inscrivez vous à la newsletter</h2>
+        					    <h2>Inscrivez vous à la newsletter</h2>
             
             					<p>Soyez informés des nouvelles oeuvres et artistes en ligne. Vous pourrez également recevoir des articles dédiés selon vos critères personnalisés</p>
             
@@ -140,7 +139,7 @@
 
 					<br>
 					<div class="text-center">
-						&copy;{{ "now"|date("Y") }} .Tous droits réservés, Design by ESDJ
+						&copy;{{ "now"|date("Y") }}. Tous droits réservés, Design by ESDJ.
 					</div>
 				</div>
 				</footer>
