--- a/templates/bo_base.html.twig
+++ b/templates/bo_base.html.twig
@@ -28,11 +28,7 @@
 
             <footer>
                 <div class="bo-footer text-center bg-light p-3">
-                    <p>&copy;
-                    <script>
-                        document.write(new Date().getUTCFullYear());
-                    </script>
-                    .Tous droits réservés, Design by ESDJ</p>
+					&copy;{{ "now"|date("Y") }}. Tous droits réservés, Design by ESDJ.
                 </div>
             </footer>
 
