Gestion photo sur Crud Membre

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -257,6 +257,10 @@ footer hr {
 .img-membre {
     width: 150px;
 }
+.img-membre-list{
+    width: 60px;
+    height: 60px;
+}
 
 .ul-profil {
     color: white;
