--- a/templates/membre/index.html.twig
+++ b/templates/membre/index.html.twig
@@ -30,7 +30,7 @@
                 <td class="align-middle">{{ membre.pseudo }}</td>
                 <td class="align-middle">
                     {% if membre.photo is defined %}
-                    <img class="rounded-circle img-membre-list" src="{{ asset(dossier_images) ~ membre.photo }}" alt="-">
+                    <img class="rounded-circle img-membre-list" src="{{ asset(dossier_images_membres) ~ membres.photo }}" alt="-">
                     {% endif %}
                 </td>
                 <td class="align-middle">{{ membre.nom }}</td>
