--- a/templates/membre/show.html.twig
+++ b/templates/membre/show.html.twig
@@ -16,7 +16,7 @@
         <div class="card-body">  
             <!-- Faire la boucle si pas de photo on affiche la photo par defaut -->
             {% if membre.photo is defined %}
-                <img class="rounded img-membre m-3" src="{{ asset(dossier_images) ~ membre.photo }}" alt="photo de profil">
+                <img class="rounded img-membre m-3" src="{{ asset(dossier_images_membres) ~ membre.photo }}" alt="photo de profil">
             {% endif %}
                 <a href="{{ path('membre_edit', {'id': membre.id}) }}" class="btn mb-3"><i class="fas fa-edit"></i> Modifier ce membre</a>   
 
