--- a/templates/profil/profil_membre.html.twig
+++ b/templates/profil/profil_membre.html.twig
@@ -17,8 +17,8 @@
 		<div class="row justify-content-between align-items-start pb-3">
 			
 			<div class="col-lg-2">
-				{% if membre.photo is defined %}
-               		<img class="rounded img-membre m-3" src="{{ asset(dossier_images_membres) ~ membre.photo }}" alt="photo de profil">
+				{% if app.user.photo is defined %}
+               		<img class="rounded img-membre m-3" src="{{ asset(dossier_images_membres) ~ app.user.photo }}" alt="photo de profil">
            		{% endif %}
 			</div>
 
