--- a/templates/formulaire_contact/index.html.twig
+++ b/templates/formulaire_contact/index.html.twig
@@ -1,5 +1,43 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Formulaire Contact{% endblock %}
+
+{% block body %}
+
+
+<body class="bc-formulaire_contact">
+    <div class="container mt-5 mb-5">
+    
+        <h1 class="h1-formulaire_contact mb-5">Formulaire de contact</h1>
+
+<div class="bg-white p-5 contact-form">
+    <div class="form-group">
+{{ form_start(formulaire_contact) }}
+    {{ form_row(formulaire_contact.nom, {'attr': {'class': 'form-control'}}) }}
+
+
+</div>
+<div class="form-group">
+    {{ form_row(formulaire_contact.email, {'attr': {'class': 'form-control'}}) }}
+
+</div>
+<div class="form-group">
+    {{ form_row(formulaire_contact.message, {'attr': {'class': 'form-control'}}) }}
+
+</div>
+
+<div class="form-group">
+    <input type="submit" value="Envoyer" class="btn btn-primary py-3 px-5">
+</div>
+{{ form_end(formulaire_contact) }}
+</div>
+
+</div>
+{% endblock %}
+
+
+{# {% extends 'base.html.twig' %}
+
 {% block title %}FormulaireContact{% endblock %}
 
 {% block body %}
@@ -31,4 +69,4 @@
         </form>
     </div>
 </body>
-{% endblock %}
+{% endblock %} #}
