Affichage Crud Articles

--- a/templates/profil/profil_artiste.html.twig
+++ b/templates/profil/profil_artiste.html.twig
@@ -63,8 +63,8 @@
 			<div class="card-body">
 				<h5 class="card-title">Mes articles</h5>
 				<ul>
-					<li class="li-profil"><a href="{{ path("article_index") }}">Voir mes articles</a></li>
-					<li class="li-profil"><a href="{{ path("article_new") }}">Ajouter un article</a></li>
+					<li class="li-profil"><a href="{{ path("artiste_articles") }}">Voir mes articles</a></li>
+					<li class="li-profil"><a href="{{ path("artiste_article_new") }}">Ajouter un article</a></li>
 				</ul>
 			</div>
 		</div>
