--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -54,7 +54,7 @@
             <div class="row ">
 
                 <!-- OEUVRE 1 -->
-                <div class="col-xl-2 col-lg-3 col-md-4">
+                <div class="col-xl-2 col-lg-6 col-md-4 col-sm-4">
                     <article id="mea-o1" class="p-3">
                         
                         <img class="rounded" src="/images/oeuvre_mea_01.jpg">
@@ -65,7 +65,7 @@
                 </div>
 
                 <!-- OEUVRE 2 -->
-                <div class=" col-xl-4 col-lg-5 col-md-6">
+                <div class=" col-xl-4 col-lg-6 col-md-6 col-sm-8">
                     <article id="mea-o2" class="p-3">
                         
                         <img class="rounded" src="/images/oeuvre_mea_02.jpg">
@@ -76,7 +76,7 @@
                 </div>
 
                 <!-- OEUVRE 3 -->
-                <div class="col-xl-4 col-lg-4 col-md-6">
+                <div class="col-xl-4 col-lg-8 col-md-6 col-sm-8">
                     <article id="mea-o1" class="p-3">
                         
                         <img class="rounded" src="/images/oeuvre_mea_02.jpg">
@@ -87,8 +87,8 @@
                 </div>
 
                 <!-- OEUVRE 4 -->
-                <div class="col-xl-2 col-lg-3 col-md-4">
-                    <article id="mea-o4" class="p-3">
+                <div class="col-xl-2 col-lg-3 col-md-4 col-sm-2">
+                    <article id="mea-o4" class="p-4">
                         
                         <img class="rounded" src="/images/oeuvre_mea_01.jpg">
                         </img>
@@ -100,7 +100,7 @@
                 <div class="row d-none d-lg-flex">
 
                     <!-- OEUVRE 5 -->
-                    <div class="col-xl-4 col-lg-6 col-md-6">
+                    <div class="col-xl-4 col-lg-8 col-md-6">
                         <article id="mea-o1" class="p-3">
                             
                             <img class="rounded" src="/images/oeuvre_mea_02.jpg">
@@ -111,7 +111,7 @@
                     </div>
 
                     <!-- OEUVRE 6 -->
-                    <div class="col-xl-2 col-lg-2 col-md-4">
+                    <div class="col-xl-2 col-lg-4 col-md-4">
                         <article id="mea-o2" class="p-3">
                             
                             <img class="rounded" src="/images/oeuvre_mea_01.jpg">
@@ -122,7 +122,7 @@
                     </div>
 
                     <!-- OEUVRE 7 -->
-                    <div class="col-xl-2 col-lg-4 col-md-4">
+                    <div class="col-xl-2 col-lg-6 col-md-4">
                         <article id="mea-o1" class="p-3">
                             <img class="rounded" src="/images/oeuvre_mea_01.jpg">
                             </img>
@@ -132,7 +132,7 @@
                     </div>
 
                     <!-- OEUVRE 8 -->
-                    <div class="col-xl-4 col-lg-7 col-md-6">
+                    <div class="col-xl-4 col-lg-6 col-md-6">
                         <article id="mea-o4" class="p-3">
                             <img class="rounded" src="/images/oeuvre_mea_02.jpg">
                             </img>
@@ -200,16 +200,10 @@
     </section>
     <section id="cards" class="container-fluid pb-4">
         <div class="container">
-            <h2>L'actualité du moment</h2>
-            <!-- CAROUSEL CARDS -->
-            <div id="carouselExampleDark" class="py-3 carousel carousel-dark slide" data-bs-ride="carousel">
-                <div class="carousel-indicators d-flex justify-content-between"> <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button><button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"> </button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="10000">
+            <h2 class="text-light">L'actualité du moment</h2>
+          
                         <div class="row justify-content-around">
-                            <div class="col-lg-3">
+                            <div class="col-md-5 col-xl-3">
                                 <div class="card" style="width: 18rem;">
                                     <img src="images/slide_mea_03.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -217,12 +211,12 @@
                                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                     </div>
                                     <div class="card-body">
-                                        <a href="#" class="card-link">Date publication<i class="fas fa-chevron-right"></i>
-          </a>
+                                        <a href="#" class="card-link">Date publication<i class="fas fa-chevron-right"></i></a>
+                                         
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-md-5 col-xl-3 mt-sm-4 mt-md-0">
                                 <div class="card" style="width: 18rem;">
                                     <img src="images/slide_mea_01.jpeg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -230,12 +224,12 @@
                                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                     </div>
                                     <div class="card-body">
-                                        <a href="#" class="card-link">Date publication<i class="fas fa-chevron-right"></i>
-	</a>
+                                        <a href="#" class="card-link">Date publication<i class="fas fa-chevron-right"></i></a>
+	
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-md-5 col-xl-3 mt-sm-4 mt-xl-0">
                                 <div class="card" style="width: 18rem;">
                                     <img src="images/slide_mea_02.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -243,95 +237,21 @@
                                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                     </div>
                                     <div class="card-body">
-                                        <a href="#" class="card-link">Date publication<i class="fas fa-chevron-right"></i>
-	</a>
+                                        <a href="#" class="card-link">Date publication<i class="fas fa-chevron-right"></i></a>
+	
 
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-3">
-                                <div class="card" style="width: 18rem;">
-                                    <img src="images/slide_mea_03.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    </div>
-                                    <div class="card-body">
-                                        <a href="#" class="card-link">Card link 
-		<i class="fas fa-chevron-right"></i>
-	</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3">
-                                <div class="card" style="width: 18rem;">
-                                    <img src="images/slide_mea_01.jpeg" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    </div>
-                                    <div class="card-body">
-                                        <a href="#" class="card-link">Card link
-		<i class="fas fa-chevron-right"></i>
-	</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3">
-                                <div class="card" style="width: 18rem;">
-                                    <img src="images/slide_mea_02.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    </div>
-                                    <div class="card-body">
-                                        <a href="#" class="card-link">Card link
-		<i class="fas fa-chevron-right"></i>
-	</a>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-3">
-                                <div class="card" style="width: 18rem;">
-                                    <img src="images/slide_mea_03.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    </div>
-                                    <div class="card-body">
-                                        <a href="#" class="card-link">Card link
-		<i class="fas fa-chevron-right"></i>
-	</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3">
-                                <div class="card" style="width: 18rem;">
-                                    <img src="images/slide_mea_01.jpeg" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    </div>
-                                    <div class="card-body">
-                                        <a href="#" class="card-link">Card link
-		<i class="fas fa-chevron-right"></i>
-	</a>
+                   
     </section>
     <section>
         <div class="mb-3 container">
 
             <h2>Les artistes en ligne</h2>
             <div class="row">
-                <div class="col-3 d-xl-flex">
+                <div class="col-md-3 col-sm-6 d-xl-flex">
                     <div>
                         <img class="artiste" src="/images/artiste_01.jpg">
                         </img>
@@ -343,7 +263,7 @@
 
                 </div>
 
-                <div class="col-3 d-xl-flex">
+                <div class="col-md-3 col-sm-6 d-xl-flex">
                     <div>
                         <img class="artiste" src="/images/artiste_02.jpg">
                         </img>
@@ -355,7 +275,7 @@
 
                 </div>
 
-                <div class="col-3 d-xl-flex">
+                <div class="col-md-3 col-sm-6 d-xl-flex">
                     <div>
                         <img class="artiste" src="/images/artiste_01.jpg">
                         </img>
@@ -367,7 +287,7 @@
 
                 </div>
 
-                <div class="col-3 d-xl-flex">
+                <div class="col-md-3 col-sm-6 d-xl-flex">
                     <div>
                         <img class="artiste" src="/images/artiste_02.jpg">
                         </img>
