page concept front

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -157,9 +157,24 @@ li {
     font-family: 'Roboto', sans-serif;
 }
 
-// .concept ul{
-//     list-style-type: ;
-// }
+
+.width-auto {
+    width: auto;
+}
+
+.text-lg {
+    font-size: 2rem;
+}
+
+.carousel-indicators li {
+    border: none;
+    background: #ccc;
+}
+
+.carousel-indicators li.active {
+    background:#87CEFA;
+}
+
 
 
 .concept img {
