creation du formulaire contact

--- a/templates/oeuvre/index.html.twig
+++ b/templates/oeuvre/index.html.twig
@@ -22,7 +22,7 @@
                 <th>Prix</th>
                 <th>Photo</th>
                 <th>Stock</th>
-                <th>actions</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
