--- a/templates/concept/index.html.twig
+++ b/templates/concept/index.html.twig
@@ -7,7 +7,7 @@
 
 <div class="container-fluid bc-top-page bg-info text-justify">
         <div class="container pt-4 pb-4">
-            <h1 class="pb-4">Art d'un temps, la galerie d'art en ligne des artistes en herbe</h1>
+            <h1 class="pb-4 titre-black">Art d'un temps, la galerie d'art en ligne des artistes en herbe</h1>
         
             <h2>Art d'un temps, est un site qui a pour vocation de faire découvrir les artistes emergents  et leur apporter une plus grande visibilité. Vous y découvrirez donc toutes les réalisations de ces artistes dans des domaines tels que la peinture, la sculpture, la céramique ,le street-art et ce quelque soit leur provenances</h2>
 
