--- a/templates/oeuvre/oeuvres.html.twig
+++ b/templates/oeuvre/oeuvres.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Oeuvre index{% endblock %}
 
 {% block body %}
-    <div class="container-fluid bc-top-page {# bg-secondary #} text-justify">
+    <div class="container-fluid bc-top-page text-justify">
         <div class="container pt-4 pb-4">
-            <h1 class="pb-4">L'art d'un temps et ses merveilles</h1>
+            <h1 class="pb-4 titre-black">L'art d'un temps et ses merveilles</h1>
         
             <p>Le temps d'un moment, l'art d'un temps vous propose de venir à la découverte de ses incroyables oeuvres, qui ont germées de l'esprit de nos artistes partenaires. Que ce soit par la peinture, la sculpture ou autres expressions créatrice qui vous sont proposés, nous espéront vous faire passer un moment de bonheur. L'art au cour du temps s'est exprimé de bien des façons, vous trouverez ici un panel d'oeuvres qui représente une partie émergente de notre temps</p>
 
