ajout notif envoi formuliare

--- a/templates/formulaire_contact/index.html.twig
+++ b/templates/formulaire_contact/index.html.twig
@@ -32,7 +32,7 @@
 				</div>
 
 				<div class="form-group">
-	          <div class="d-flex justify-content-end"><button type="submit" class="btn-formulaire_contact ">Envoyer</button></div>
+	          <div class="d-flex justify-content-end"><button type="submit" class="btn-formulaire_contact" onclick="return confirm('💌 Demande de contact envoyée ✅')">Envoyer</button></div>
 				</div>
 
 				{{ form_end(formulaire_contact) }}
